@@ -315,6 +315,24 @@ name|ql
 operator|.
 name|exec
 operator|.
+name|FunctionRegistry
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|exec
+operator|.
 name|Task
 import|;
 end_import
@@ -1747,6 +1765,13 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+name|FunctionRegistry
+operator|.
+name|unregisterTemporaryUDF
+argument_list|(
+literal|"test_udaf"
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 name|void
